# arm7_draw_ecam

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
arm7_draw_ecam/: ecam_path.py  ecam_traj.py  ee_trail_marker.py  fk_arm_final.py  ik_arm_final.py
config/: arm_robot_controllers.yaml
docs/: ecam_drawing_deep_dive.md  ecam_drawing_simple.dot  ecam_path_state_machine.dot
launch/: ecam_simple.launch.py  gazebo.launch.py  rviz.launch.py
meshes/: Link_7.STL  ee.STL
results/ecam_drawing/: ecam_ideal.csv  ecam_wp_points.csv
rviz/: view.rviz
tools/: plot_ecam_thesis.py  verify_ecam_drawing.py
urdf/: arm.xacro  arm7_draw_ecam.urdf.xacro  gazebo.xacro  ros2control.xacro
